deployment.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: card-service  
  labels:  
    app: card-service  
spec:  
  ports:  
    - name: http  
      port: 8000  
  selector:  
    app: card-service  
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: card-service  
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: card-service  
        version: v1  
    spec:  
      containers:  
        - name: springboot-istio-gke  
          image: gcr.io/springboot-on-gke/springboot-istio-gke:1.0  
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8000  
          livenessProbe:  
            httpGet:  
              path: /  
              port: 8000  
            initialDelaySeconds: 5  
            periodSeconds: 5
